Resolving various compiler warnings